# mopadi

./: .gitattributes  .gitignore  LICENSE  README.md  compute_and_vizualize_ssim.py  conf.yaml  dataset.py  encode.py  experiment.py  lmdb_writer.py  manipulate_linear_cls.py  metrics.py  plot_manip_results.py  pyproject.toml  renderer.py  requirements-mopadi2_python311.txt  requirements.txt  run_hpc.slurm  run_mopadi.py  ssim.py  train_autoenc_hpc.slurm  train_diff_autoenc.py  train_mopadi_autoenc.slurm
configs/: choices.py  config.py  config_base.py  templates.py  templates_cls.py  templates_latent.py
data_prep/: check-black-or-white-tiles.py  create_attr_file_from_clini_table.py  create_attr_file_from_folder_names.py  create_attr_file_lung.py  create_clini_table_lung.py  data_convert_to_lmdb.py  filter_out_patients_wo_target_clini_info.py  get_tiles_within_rois.py  utils.py
datasets/: .gitignore
datasets/patient_splits/: Pancancer_test_split.txt  TCGA_BRCA_test_split.json  TCGA_CRC_test_split.json
diffusion/: README.md  base.py
exp/: run_liver.py  run_lung.py  run_pancancer.py  run_tcga_brca.py  run_tcga_brca_512.py  run_tcga_crc-hpc.py  run_tcga_crc.py  run_texture.py
images/example_data/: README.md
linear_clf/: train_linear_cls.py
linear_clf/evaluate/: evaluate_cls.py  write_results_sampler.py
linear_clf/manipulate/: manipulate_linear_cls.py  manipulate_liver.py  plot_manip_results.py
linear_clf/predict/: predict_manipulated_texture.py
mil/: classifier_mil_crc_crossval.py  classifier_mil_lung.py  classifier_mil_lung_crossval.py  classifier_mil_msi.py  crossval_roc.py  manipulate-mil-tim.py  manipulate_crc_msi.py  manipulate_lung.py  manipulator_mil.py  mil_crc_get_top_tiles.py  mil_lung_get_top_tiles.py  set_transformer.py  utils.py
model/: blocks.py  latentnet.py  unet.py  unet_autoenc.py
notebooks/: .gitignore  manipulate-CRC-VAL-HE-7K.ipynb  manipulate-crc-msi-mil.ipynb  manipulate-liver-cancer-types-linear.ipynb  manipulate-liver-cancer-types-mil.ipynb  unconditional_sampling_TCGA-CRC.ipynb  unconditional_sampling_texture.ipynb
results/: expert_kath_tud.json  expert_nicr_aug.json  expert_sebf_mainz.json
utils/: extract_features.py  metrics.py  renderer.py  sample_unconditional.py
(+65 files in other folders)
