[project]
name = "mopadi"
version = "0.1.0"
description = "Counterfactual explanations of histopathology DL models"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Laura Zigutyte", email = "laura.zigutyte@tu-dresden.de" },
    { name = "Tim Lenz", email = "tim.lenz@tu-dresden.de" }
]
requires-python = ">=3.11"
dependencies = [
    "cmcrameri==1.9",
    "h5py==3.13.0",
    "lmdb==1.6.2",
    "lpips==0.1.4",
    "matplotlib==3.10.1",
    "numpy==2.2.5",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "python-dotenv==1.1.0",
    "pytorch-fid==0.3.0",
    "pytorch-lightning==2.5.1.post0",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "tensorboard==2.19.0",
    "torch==2.7.0",
    "torchmetrics==1.7.1",
    "torchvision==0.22.0",
    "tqdm==4.67.1",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mopadi"]

[project.scripts]
mopadi = "mopadi.run_mopadi:main"
